testdata/baselines/reference/submodule/compiler/jsdocFunctionClassPropertiesDeclaration.errors.txt
/a.js(5,21): error TS7006: Parameter 'x' implicitly has an 'any' type.
/a.js(5,24): error TS7006: Parameter 'y' implicitly has an 'any' type.
/a.js(6,11): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
/a.js(7,16): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
/a.js(9,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
/a.js(10,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== /a.js (6 errors) ====
    /**
     * @param {number | undefined} x
     * @param {number | undefined} y
     */
    export function Foo(x, y) {
                        ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
                           ~
!!! error TS7006: Parameter 'y' implicitly has an 'any' type.
        if (!(this instanceof Foo)) {
              ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
!!! related TS2738 /a.js:5:17: An outer value of 'this' is shadowed by this container.
            return new Foo(x, y);
                   ~~~~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
        }
        this.x = x;
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
!!! related TS2738 /a.js:5:17: An outer value of 'this' is shadowed by this container.
        this.y = y;
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
!!! related TS2738 /a.js:5:17: An outer value of 'this' is shadowed by this container.
    }
    